# myraytracer

./: Cargo.toml  index.html  start-watcher.nu
.cargo/: config.toml
.github/workflows/: deploy.yml
common/: Cargo.toml
common/src/: lib.rs  render.rs
cpu-runner/: Cargo.toml
cpu-runner/src/: main.rs  renderer.rs  state.rs
driver/: Cargo.toml
driver/src/: main.rs  renderer_module.rs
native-runner/: Cargo.toml
native-runner/src/: main.rs
raytracer/: Cargo.toml
raytracer/src/: lib.rs  materials.rs  primitives.rs  ray.rs  sample_framebuffer.wgsl  shader.wgsl  utils.rs  vision.rs  waker.rs
render/: Cargo.toml
render/src/: lib.rs  ray.rs
src/: lib.rs  main.rs  param.rs  prelude.rs  shader.wgsl  solid.rs  window.rs
wasm-runner/: Cargo.toml
wasm-runner/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
