[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
env_logger = "0.9.0"
glam = "0.20.2"
ipc-channel = "0.15.0"
itertools = "0.10.3"
log = "0.4.14"
pixels = "0.9.0"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
winit = "0.26.1"
