[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
color-eyre = "0.6.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.5"
wgpu = "0.12.0"
winit = "0.26.1"

[features]
