[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
log = { version = "0.4.16", features = ["serde"] }
wgpu = "0.12.0"
console_log = "0.2.0"
wasm-bindgen = "0.2.79"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
raw-window-handle = "0.4.2"
parking_lot = "0.12.0"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.136", features = ["derive"] }
bytemuck = { version = "1.8.0", features = ["derive"] }
rand_xoshiro = "0.6.0"
getrandom = { version = "0.2.5", features = ["js"] }
rand = "0.8.5"
futures-task = "0.3.21"

[dependencies.web-sys]
version = "0.3.56"
features = ["Window", "Document", "Element", "HtmlCanvasElement", "HtmlButtonElement", "Location"]

[features]
default = ["webgl"]
webgl = ["wgpu/webgl"]

[workspace]
members = ["run-wasm"]
