[package]
name = "cpu-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
pixels = "0.9.0"
winit = { version = "0.26.1", default-features = false, features = ["x11"]}
raytracer = { path = "../raytracer" }
glam = "0.20.2"
rand = "0.8.5"
parking_lot = "0.12.0"
log = "0.4.14"
env_logger = "0.9.0"
scopeguard = "1.1.0"

[features]
