[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
log = "0.4.16"
bytemuck = { version = "1.8.0", features = ["derive"] }
wgpu = "0.20.0"
rand_xoshiro = "0.6.0"
rand = "0.8.5"
winit = "0.30.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.5", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"
features = [
  "HtmlCanvasElement",
]

[features]
webgl = ["wgpu/webgl"]
