[package]
name = "wasm-runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
raytracer = { path = "../raytracer" }
wasm-bindgen = "0.2.79"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.29"
js-sys = "0.3.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_urlencoded = "0.7.1"
log = { version = "0.4.16", features = ["serde"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.web-sys]
version = "0.3.69"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "Location",
]

[features]
webgl = ["raytracer/webgl"]
